# libskeleton

./: .gitignore  Makefile.am  README  configure.ac
apps/: .gitignore  Makefile.am  skeletoninfo.c
lib/: .gitignore  Makefile.am  skeleton.h  skeleton_private.h  version.c
