AC_INIT(libskeleton, 0.1, villeb@bytesnap.co.uk)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(lib/version.c)
AC_CONFIG_MACRO_DIRS([m4])
m4_pattern_allow(AC_CONFIG_MACRO_DIRS)

AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_SYS_LARGEFILE

AM_INIT_AUTOMAKE

AC_OUTPUT(Makefile lib/Makefile apps/Makefile)
